[package]
name = "rustypath"
version = "1.2.0"
edition = "2021"
repository = "https://github.com/d33p0st/rustypath"
authors = ["Soumyo Deep Gupta <deep.main.ac@gmail.com>"]
description = "Easily manage paths in rust. A straight-forward no bullshit crate to manage paths. Either you get what you want, or you dont."
# license-file = "LICENSE"
license = "MIT"
readme = "README.md"
keywords = ["rustypath", "d33pster", "path", "d33p0st", "path-manager"]
categories = ["filesystem"]

[dependencies]
dirs = "5.0.1"
pyo3 = { version = "0.22.2", features = ["extension-module"] }

[features]
default = ["Creation", "Management", "Boolean", "Conversion"]
Boolean = []
Management = []
Conversion = []
Creation = []
pyo3-bindings = []